# HireReady-AI

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  schema.json
.streamlit/: config.toml
utils/: __init__.py  analyze_candidate.py  basic_details.py  evaluation.py  llm_call.py  load_content.py  prompts.py  record_utils.py  save_interview_data.py  text_to_speech.py  transcript_audio.py
